syntax = "proto3";

package product;

import "app/protos/types/product.proto";

message CreateProductRequest {
    types.Product product = 1;
}

message CreateProductResponse {
    bool status = 1;
}
